--- a/src/styles/animals.css
+++ b/src/styles/animals.css
@@ -1,4 +1,33 @@
 img {
-    max-width: 400px;
-    min-width: 300px;
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+}
+
+.img-container {
+    width: 400px;
+    border-radius: 5px;
+    background-color:antiquewhite;
+    box-shadow: 2.5px 2.5px 5px rgb(212, 212, 212);
+}
+
+.container {
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.container p {
+    color: black;
+    margin: 5px;
+}
+
+.container h3 {
+    color: black;
+    margin: 5px;
+}
+
+a {
+    text-decoration: none;
 }
